--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,8 @@
         <!-- bower:css -->
 
         <!-- build:css styles/main.css -->
-        <link rel="stylesheet" href="styles/main.css">
+        <!-- <link rel="stylesheet" href="styles/main.css"> -->
+        <link rel="stylesheet" href="styles/index.css">
         <!-- endbuild -->
 
         <!-- build:js scripts/vendor/modernizr.js -->
