--- a/app/index.html
+++ b/app/index.html
@@ -33,71 +33,42 @@
         <![endif]-->
 
         <div id="wrapper">
-          <section ng-controller="SidebarController"
-                   ng-mouseover="sidebarHovered=true"
-                   ng-mouseleave="sidebarHovered=false"
+          <section ng-controller="SidebarCtrl"
                    id="sidebar-wrapper"
                    class="col-md-1">
-            <nav id="sections">
+
+            <nav id="app-sections">
               <ul>
-                <li><a class="glyphicon glyphicon-search" href="#"></a></li>
+                <!-- <li><a class="glyphicon glyphicon-search" href="#"></a></li>
                 <li><a class="glyphicon glyphicon-home" href="#"></a></li>
-                <li><a class="glyphicon glyphicon-th" href="#"></a></li>
-                <!-- <li><a href="#"><i class="fa fa-search fa-fw"></i></a></li> -->
-                <!-- <li><a href="#"><i class="fa fa-user fa-fw"></i></a></li> -->
-                <!-- <li><a href="#"><i class="fa fa-home fa-fw"></i></a></li> -->
-                <!-- <li><a href="#"><i class="fa fa-bars fa-fw"></i></a></li> -->
+                <li><a class="glyphicon glyphicon-th" href="#"></a></li> -->
+                <li>
+                  <a class="flaticon-dark33" href="#" title="Search MisspelledKee"></a>
+                </li>
+                <li><a class="flaticon-outline5" href="#" title="Yout Homepage Dashboard"></a></li>
+                <li><a class="flaticon-group25" href="#" title="Your Groups"></a></li>
               </ul>
             </nav>
 
-            <nav id="groups">
-              <ul>
-                <li class="group-h">
-                  <!-- <a class="group-h" href="#">H</a> -->
-                  <button type="button" class="btn btn-primary btn-lg btn-block">hell</button>
-                </li>
-                <li class="group-t">
-                  <!-- <span class="badge pull-left">42</span> -->
-                  <!-- <a class="group-t" href="#">T</a> -->
-                  <button type="button" class="btn btn-primary btn-lg btn-block">Tek no</button>
-                </li>
-                <li class="group-r">
-                  <!-- <a class="group-r" href="#">R</a> -->
-                  <button type="button" class="btn btn-primary btn-lg btn-block">R</button>
-                </li>
-                <li class="group-d">
-                  <!-- <a class="group-d" href="#">D</a> -->
-                  <button type="button" class="btn btn-primary btn-lg btn-block">Dd</button>
-                </li>
-                <li class="group-p">
-                  <button type="button" class="btn btn-primary btn-lg btn-block">PRPP</button>
-                </li>
-                <li class="group-g">
-                  <button type="button" class="btn btn-primary btn-lg btn-block">Ffound</button>
-                </li>
-                <li class="group-d">
-                  <!-- <a class="group-d" href="#">D</a> -->
-                  <button type="button" class="btn btn-primary btn-lg btn-block">Okeku</button>
-                </li>
-                <li class="group-f">
-                  <button type="button" class="btn btn-primary btn-lg btn-block">gg</button>
-                </li>
-                <li class="active-group group-r1">
-                  <!-- <a class="group-r" href="#">R</a> -->
-                  <button type="button" class="btn btn-primary btn-lg btn-block">K</button>
-                </li>
+            <!-- @todo the GroupsCtrl is kind of reduntant in this instance -->
+            <!-- The SidebarCtrl is responsable of setting the data for the groups list -->
+            <!-- <nav id="groups"> -->
+              <!-- <ke-sidebar-groups></ke-sidebar-groups> -->
 
-                <li class="group-p">
-                  <button type="button" class="btn btn-primary btn-lg btn-block">Kk</button>
-                </li>
-              </ul>
+            <nav id="groups">
+              <ke-favorite-groups source="groups.list"></ke-favorite-groups>
             </nav>
 
             <!-- <section ng-class="{'active': sidebarHovered}" id="group-details"> -->
-            <section id="group-details">
+            <!-- <section id="group-details">
               <h2>K, there isn't one like it!{{sidebarHovered}}</h2>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
-            </section>
+            </section> -->
+
+            <!-- <p class="sectioned">
+              v 0.34.5<br />
+              fast lane
+            </p> -->
           </section>
 
           <main id="main-wrapper" class="col-md-11 pull-right">
@@ -133,6 +104,7 @@
         <script src="bower_components/angular/angular.js" type="text/javascript"></script>
         <script src="bower_components/angular-ui-router/release/angular-ui-router.js" type="text/javascript"></script>
         <script src="bower_components/angular-ui-utils/ui-utils.min.js" type="text/javascript"></script>
+        <script src="bower_components/lodash/dist/lodash.min.js" type="text/javascript"></script>
         <!-- endbuild -->
 
         <!-- build:js({.tmp, app}) scripts/scripts.js -->
