--- a/app/index.html
+++ b/app/index.html
@@ -55,9 +55,9 @@
             <!-- <nav id="groups"> -->
               <!-- <ke-sidebar-groups></ke-sidebar-groups> -->
 
-            <nav id="groups">
-              <ke-favorite-groups source="groups.list"></ke-favorite-groups>
-            </nav>
+            <!-- <nav id="groups">
+              <div ke-favorite-groups source="groups.list"></div>
+            </nav> -->
 
             <!-- <section ng-class="{'active': sidebarHovered}" id="group-details"> -->
             <!-- <section id="group-details">
