messing around with the styles

--- a/app/index.html
+++ b/app/index.html
@@ -42,11 +42,29 @@
                 <!-- <li><a class="glyphicon glyphicon-search" href="#"></a></li>
                 <li><a class="glyphicon glyphicon-home" href="#"></a></li>
                 <li><a class="glyphicon glyphicon-th" href="#"></a></li> -->
-                <li>
-                  <a class="flaticon-dark33" href="#" title="Search MisspelledKee"></a>
-                </li>
+                <!-- <li><a class="flaticon-dark33" href="#" title="Search MisspelledKee"></a></li> -->
                 <li><a class="flaticon-outline5" href="#" title="Yout Homepage Dashboard"></a></li>
-                <li><a class="flaticon-group25" href="#" title="Your Groups"></a></li>
+                <!-- <li><a class="flaticon-group25" href="#" title="Your Groups"></a></li> -->
+              </ul>
+            </nav>
+
+            <nav id="tab-sections">
+              <ul>
+                <li class="active">
+                  <a class="TemplateColor" href="#" title="The html/haml/w/e template tab">
+                    <xmp></></xmp>
+                  </a>
+                </li>
+                <li>
+                  <a class="StylesColor" href="#" title="Css, compass, any type you want">
+                    <xmp>{}</xmp>
+                  </a>
+                </li>
+                <li>
+                  <a class="ScriptColor" href="#" title="Scripts that add behaviour to the app">
+                    <xmp>();</xmp>
+                  </a>
+                </li>
               </ul>
             </nav>
 
