--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" ng-app="MisspelledKee">
+<html class="no-js" ng-app="misspelledkee">
 <head>
     <meta charset="utf-8">
     <title>MisspelledKee</title>
@@ -9,6 +9,10 @@
 </head>
 <body>
     <vpx-test-directive>vpx test directive's content</vpx-test-directive>
+
+    <content ui-view>
+
+    </content>
 
     <!-- usemin task that copies every file to the ./dist directory -->
     <!-- build:bower(vendor) scripts/vendors-bundle.js -->
