add dashboard and groups state

--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,12 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 </head>
 <body>
-    <vpx-test-directive>vpx test directive's content</vpx-test-directive>
-
-    <content ui-view>
-
-    </content>
+    <content ui-view></content>
 
     <!-- usemin task that copies every file to the ./dist directory -->
     <!-- build:bower(vendor) scripts/vendors-bundle.js -->
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <!-- endbuild -->
 
